# embalmer

./: .gitignore  NOTICE  POST_V01.md  README.md  pyproject.toml
embalmer/: __init__.py  binaries.py  certs.py  cli.py  component_blocklist.py  components.py  creds.py  crypthash.py  defaultcreds.py  diff.py  extract.py  fetch.py  gate.py  licenses.py  models.py  ntia.py  pipeline.py  purl_validate.py  report.py  sarif.py  sbom.py  sbom_cve.py  sbom_license.py  sbom_osv.py  sbom_supplier.py  severity.py  spdx_validate.py  summary.py  vex.py  vex_override.py
tests/: conftest.py  test_autopsy.py  test_binaries.py  test_certs.py  test_component_blocklist.py  test_components.py  test_creds.py  test_defaultcreds.py  test_diff.py  test_extract.py  test_fetch.py  test_gate.py  test_integration.py  test_licenses.py  test_ntia.py  test_parallel.py  test_purl_validate.py  test_report.py  test_sarif.py  test_sbom.py  test_sbom_components.py  test_sbom_cve.py  test_sbom_license.py  test_sbom_osv.py  test_sbom_spdx.py  test_sbom_supplier.py  test_severity.py  test_smoke.py  test_spdx_validate.py  test_summary.py  test_vex.py  test_vex_override.py
tests/fixtures/: REGENERATE.md
